manifests/0000_40_kube-storage-version-migrator-operator_02_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/run-level: "0"
    openshift.io/cluster-monitoring: "true"
  name: openshift-kube-storage-version-migrator-operator
