manifests/0000_40_kube-storage-version-migrator-operator_06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-storage-version-migrator-operator
  name: kube-storage-version-migrator-operator
  labels:
    app: kube-storage-version-migrator-operator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kube-storage-version-migrator-operator
  template:
    metadata:
      name: kube-storage-version-migrator-operator
      labels:
        app: kube-storage-version-migrator-operator
    spec:
      serviceAccountName: kube-storage-version-migrator-operator
      containers:
      - name: kube-storage-version-migrator-operator
        terminationMessagePolicy: FallbackToLogsOnError
        image: quay.io/sanchezl/storage-version-migration-migrator:v0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
          name: metrics
          protocol: TCP
        command: ["cluster-kube-storage-version-migrator-operator", "start"]
        resources:
          requests:
            memory: 50Mi
            cpu: 10m
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: "system-cluster-critical"
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
