manifests/0000_40_kube-storage-version-migrator-operator_07_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-kube-storage-version-migrator-operator
  name: kube-storage-version-migrator-operator
  labels:
    app: kube-storage-version-migrator-operator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kube-storage-version-migrator-operator
  template:
    metadata:
      name: kube-storage-version-migrator-operator
      labels:
        app: kube-storage-version-migrator-operator
    spec:
      serviceAccountName: kube-storage-version-migrator-operator
      containers:
      - name: kube-storage-version-migrator-operator
        terminationMessagePolicy: FallbackToLogsOnError
        image: quay.io/openshift/origin-cluster-kube-storage-version-migrator-operator:v4.4
        ports:
        - containerPort: 8443
          name: metrics
          protocol: TCP
        command:
          - "cluster-kube-storage-version-migrator-operator"
          - "start"
          - "--config=/var/run/configmaps/config/config.yaml"
        resources:
          requests:
            memory: 50Mi
            cpu: 10m
        volumeMounts:
          - mountPath: /var/run/configmaps/config
            name: config
          - mountPath: /var/run/secrets/serving-cert
            name: serving-cert
      volumes:
        - name: serving-cert
          secret:
            secretName: serving-cert
            optional: true
        - name: config
          configMap:
            name: config
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: "system-cluster-critical"
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
