manifests/0000_40_kube-storage-version-migrator-operator_08_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    service.alpha.openshift.io/serving-cert-secret-name: serving-cert
  labels:
    app: kube-storage-version-migrator-operator
  name: metrics
  namespace: openshift-kube-storage-version-migrator-operator
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: kube-storage-version-migrator-operator
  type: ClusterIP
